--- a/_config.yml
+++ b/_config.yml
@@ -8,17 +8,28 @@ title: Crafty Amanda
 # email: your-email@example.com
 description: >- # this means to ignore newlines until the next YAML element
   A carefully compiled compendium of crafty components
+# twitter_username: username
+# github_username: username
+minimal_mistakes_skin: default
+search: true
 # baseurl: "" # the subpath of your site, e.g. /blog
 domain: www.craftyamanda.com
 url: "https://www.craftyamanda.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
+markdown: kramdown
 #theme: minima
 #remote_theme: pages-themes/slate@v0.2.0
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
+#remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+# Outputting
+permalink: /:categories/:title/
+# paginate: 5 # amount of posts to show
+# paginate_path: /page:num/
+timezone: "America/New_York"
+
+# include:
+#   - _pages
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -42,8 +53,71 @@ exclude:
   - vendor/gems/
   - vendor/ruby/
 
-# Cayman Theme Configuration
-show_downloads: false
+plugins:
+  # - jekyll-paginate
+  # - jekyll-sitemap
+  # - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+  - jekyll-remote-theme
+
+author:
+  name   : "Amanda Watson"
+  avatar : "/assets/images/bio-photo.jpg"
+  bio    : "My awesome biography constrained to a sentence or two goes here."
+  links:
+    - label: "Patrick's Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://www.patrickwatson.org"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/"
+
+footer:
+  links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://instagram.com/"
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
 
 
 
