--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 
 title: Crafty Amanda
 # email: your-email@example.com
-description: >- # this means to ignore newlines until the next YAML element
+name: &name Amanda Watson
+description: &description >- # this means to ignore newlines until the next YAML element
   A carefully compiled compendium of crafty components
 # twitter_username: username
 # github_username: username
@@ -24,12 +25,12 @@ markdown: kramdown
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 # Outputting
 permalink: /:categories/:title/
-# paginate: 5 # amount of posts to show
-# paginate_path: /page:num/
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
 timezone: "America/New_York"
 
-# include:
-#   - _pages
+include:
+  - _pages
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -52,20 +53,23 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+  - README.md
+  - LICENSE
+  - "*.sh"
+  - dev.env
 
 plugins:
-  # - jekyll-paginate
-  # - jekyll-sitemap
-  # - jekyll-gist
+  - jekyll-paginate
+  - jekyll-sitemap
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
   - jekyll-remote-theme
 
 author:
-  name   : "Amanda Watson"
+  name   : *name
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : *description
   links:
     - label: "Patrick's Website"
       icon: "fas fa-fw fa-link"
