--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "eliostruyf.vscode-front-matter"
+                "eliostruyf.vscode-front-matter",
+                "Dedsec727.jekyll-run"
             ]
         }
     }
