Moved samples to drafts folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "rubyLsp.rubyVersionManager": "rvm"
+    "rubyLsp.rubyVersionManager": "rvm",
+    "jekyll-run.commandLineArguments": "--drafts"
 }
